# CUDA-SIPG-matrix-free

./: CMakeLists.txt  Doxyfile  Makefile  README.md
include/: CPU_TIMER.hpp  CUDA_ERRORS.hpp  CUDA_TIMER.hpp  LGL_quadrature_table.hpp  abs_mvm.hpp  abs_mvm_multigpu.hpp  build_square_mesh.hpp  conjugate_gradient_gpu.hpp  conjugate_gradient_kernels.hpp  conjugate_gradient_multigpu.hpp  cublas_wrapper.hpp  device_const.hpp  dotproduct_multigpu.hpp  lapack_wrapper.cpp  lapack_wrapper.hpp  laplacian_operator.hpp  legendre_poly.hpp  mesh_info.hpp  mode_matrix.hpp  mode_matrix_kernels.hpp  mode_vector.hpp  rhs.hpp  sem_basis_test_2d_gpu_kernels.hpp  sem_function.hpp  sem_gpu_kernels.hpp  sipg_sem_1d.hpp  sipg_sem_2d.hpp  sipg_sem_2d_gpu_kernels.hpp  sipg_sem_2d_gpu_kernels_multigpu.hpp  sipg_sem_2d_multigpu.hpp  volume_gpu_kernels.hpp
performance_tests/: constant_dof_change_degree_and_noe.cu  flux_kernels_optim.hpp  flux_kernels_performance_test.cu  laplacian_kernel_optim.hpp  multigpu-mvm.cu  mvm_performance_test.cu  one_iteration_of_sem_sipg_solved_on_gpu_test.cu  volume_kernel_performance_test.cu
validation_tests/: analytical_solutions.hpp
validation_tests/mesh/: dotproduct_multigpu_test.cu  multigpu_mesh_test.cu  rhs_test.cu
validation_tests/quadrature/: GLL_nodes_analytical_validation_test.cpp  GLL_nodes_weights_validation_test.cpp  legendre_functions_analytical_validation_test.cpp
validation_tests/sem_basis/: diagonal_block_inversion.cpp  mode_matrix_validation_test.cu  plot_basis.cpp  sem_1d_bases_analitycal_validation_test.cpp  sem_1d_nitsche_bc_validation_test.cpp  sem_2d_nitsche_bc_validation_test.cpp  sem_laplacian_gpu_validation_test.cu  sem_solved_on_gpu_validation_test.cu
validation_tests/sipg_sem/: sipg_2d_h_adaptivity.cu  sipg_2d_h_adaptivity_multigpu.cu  sipg_2d_multigpu.cu  sipg_2d_p_adaptivity.cu  sipg_sem_1d_class_validation_test.cpp
